* Fri May 8 00:12:00 EDT 2015 Tim Savannah <kata198@gmail.com>
- Add alias to myps2 "other user" argument (first arg) of "." to resolve
to local user. Example "myps2" and "myps2 ." are equivlant.
- Add built-in searching to all of the myps2 and ps2 variants. Each
additional argument that is present specifies an AND filter for that
string to be present.
    
      Examples:
        ps2 gcc myproject # This will return any commandline by any user
                          # which contains both "gcc" and "myproject"
    
        myps2 . firefox   # Show all processes owned by me which contain
                          # "firefox" in the cmdline string


* Thu Apr 30 01:11:36 EDT 2015 Tim Savannah <kata198@gmail.com>
- Relase version 2.0. All below 
- Add support for viewing threads. This is accomplished by the "t"
  variant (mypst2, pst2, mypst2_quoted etc..)
- Allow a single argument for the myps* variants. The argument is a
  username to filter (default of no argument is still current user)
- Vastly improve performance. Got some good optimizations in here.
  Several times faster than previous versions.
- Draw trees when in thread mdoe, to associate  threads to their parent
  process. "ps auxwwH --forest"  is invalid -- PS can't seem to do this,
  but we can.
- Fix compilation when "bindir" was removed
- Support running Makefile directly.
- Update indentation and include a couple comments
- Update documentation a litttle bit
- A little better structure to make future variants easier

commit 3284e19e139493c2125adfcfa849980a2d369296
Author: Tim Savannah <kata198@gmail.com>
Date:   Fri Apr 24 16:16:27 2015 -0400

    fix _quotes -> _

commit cecc0ebcdeeae7d392b9c55a7162f63aed725d66
Author: Tim Savannah <kata198@gmail.com>
Date:   Mon Mar 23 13:33:46 2015 -0400

    missed during transfer

commit 3cb8af861704784a6b49760537ff985ea22c2ea2
Author: Tim Savannah <kata198@gmail.com>
Date:   Fri Mar 20 16:19:29 2015 -0400

    Quote better
